--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,23 @@
-# Local OS files
-.DS_Store
-
+### Terraform template
 # Local .terraform directories
 **/.terraform/*
-
-**/.terraform.lock.*
+**/.terraform.lock.hcl
+**/.terragrunt-cache/*
 
 # .tfstate files
+
+# Local dev files
+.idea
+
+# Terraform state
+**/terraform.tfstate.d/*
 *.tfstate
 *.tfstate.*
 
-# Crash log files
-crash.log
+# Terraform plan
+*.plan
 
-# Ignore any .tfvars files that are generated automatically for each Terraform run. Most
-# .tfvars files are managed as part of configuration and so should be included in
-# version control.
-#
-*.tfvars
-*.tfvars.tpl
+# local vars
+terraform.tfvars
 
-# Ignore override files as they are usually used to override resources locally and so
-# are not checked in
-override.tf
-override.tf.json
-*_override.tf
-*_override.tf.json
-
-backend*.hcl
-backend-dr.hcl
-backend.tf
-
-# This files are not supposed to upload
-## variables file to edit TFC
-pyvars.txt
-## Templates files generated locally
-**/vault.yaml
-**/consul.yaml
-**/tfe_vars.sh
-
-vault-init.log
-pyvars_file.py
+*.hclic
