--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -210,3 +210,27 @@ tasks:
         eval $(terraform output -raw eval_vars)
         nomad job stop -purge gcp-wi-demo || true
         nomad job run -var gcp_project=$GCP_PROJECT -var gcp_wi_provider=$GCP_WI_PROVIDER -var gcp_service_account=$GCP_WI_SERVICE_ACCOUNT jobs/gcp-wi-demo.nomad
+
+  job-wi-status:
+    desc: Check the status of the workload identity job
+    cmds:
+      - |
+        nomad job status gcp-wi-demo
+        nomad alloc status -json -short | jq -r '.[] | select(.JobID == "gcp-wi-demo") | .ID' | xargs -n1 nomad alloc status
+
+  job-wi-exec:
+    desc: Check the status of the workload identity job
+    cmds:
+      - nomad alloc exec -i -t {{ .ID }} bash
+    vars:
+      ID:
+        sh: nomad job allocs -json gcp-wi-demo | jq -r '.[-1].ID'
+
+  docker-build:
+    desc: Build the Docker image for the workload identity job
+    dir: jobs/monte-carlo
+    cmds:
+      - |
+        docker buildx build --platform linux/amd64,linux/arm64 \
+        -t ghcr.io/nhsy-hcp/consul-nomad-gcp/monte-carlo:latest \
+        --push .
